<resources>
    <string name="app_name">[Linh]Intern20Summer1</string>
    <string name="facebook_text_view_description">Facebook</string>
    <string name="google_text_view_description">Google</string>
    <string name="or_text_view_description">or</string>
    <string name="email_id_text_view_description">Email ID</string>
    <string name="email_edit_text_hint">Please input email</string>
    <string name="password_text_view_description">Password</string>
    <string name="full_name_edit_text_hint">Please input full name</string>
    <string name="mobile_number_edit_text_hint">Please input mobile number</string>
    <string name="password_edit_text_hint">Please input password</string>
    <string name="confirm_password_edit_text_hint">Please input confirm password</string>
    <string name="forgot_password_text_view_description">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="do_not_have_an_account_text_view_description">Don\'t have an account?</string>
    <string name="register_now_text_view_description">Register Now</string>
    <string name="register_to_music_festival_text_view_description">Register to Music Festival</string>
    <string name="full_name_text_view_description">Full Name</string>
    <string name="email_text_view_description">Email</string>
    <string name="mobile_number_text_view_description">Mobile Number</string>
    <string name="confirm_password_description">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="policy_text_view_description">By registering you agree to Terms &amp; Conditions and Privacy Policy of the Festival</string>
    <string name="home_text_view_description">Home</string>
    <string name="avatar_text_view_description">Avatar</string>
    <string name="sign_in_fragment_title_dialog">Incorrect</string>
    <string name="sign_in_fragment_message_dialog">Email or Password is incorrect</string>
    <string name="sign_in_fragment_ok_button_description">OK</string>
    <string name="sign_up_fragment_choose_option_dialog">Choose an option:</string>
    <string name="sign_up_fragment_gallery">Gallery</string>
    <string name="sign_up_fragment_camera">Camera</string>
    <string name="sign_up_fragment_image_profile_title">title</string>
    <!--Week3-->
    <string name="week3_email_id_text_view_description">Enter your email ID</string>
    <string name="week3_password_text_view_description">Type your password</string>
    <string name="retype_password_text_view_description">Retype your password</string>
    <string name="week3_email_edit_text_hint">Email</string>
    <string name="email_edit_text_password">Password</string>
    <string name="media_text_view_link">Link your social media profiles</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="not_registered_text_view_description">Not registered yet?</string>
    <string name="sign_up_text_view_description">Sign up!</string>
    <!--Week6-->
    <string name="text_view_next_description">Next</string>
    <string name="tab_layout_activity_home_text_view">Home</string>
    <string name="tab_layout_activity_info_text_view">Info</string>
    <string name="tab_layout_activity_another_text_view">Another</string>
    <string name="home_activity_step_text_view">Step</string>
    <string name="week_three_button_description">Week 3</string>
    <string name="week_four_button_description">Week 4</string>
    <string name="week_six_button_description">Week 6</string>
    <string name="week_seven_button_description">Week 7</string>
    <!--Week7-->
    <string name="register_text_view_description">Register</string>
    <string name="user_name_edit_text_hint">User Name</string>
    <string name="university_edit_text_hint">University</string>
    <string name="home_town_edit_text_hint">Home Town</string>
    <string name="next_button_description">NEXT</string>
    <string name="open_drawer_content_desc_rec">open</string>
    <string name="close_drawer_content_desc_rec">close</string>
    <string name="action_bar_title">Vegetable Garden</string>
    <string name="share_preference_user_name_default">userName</string>
    <string name="share_preference_university_default">university</string>
    <string name="share_preference_home_town_default">homeTown</string>
    <string name="share_preference_avatar_default">avatar</string>
    <string name="toolbar_title">Thông Tin Cây</string>
    <string name="watering_button_description">Tưới Nước</string>
    <string name="cut_down_button_description">Chặt Bỏ</string>
    <string name="plant_detail_fragment_worm_description">Cây bị sâu</string>
    <string name="plant_detail_fragment_lack_water_description">Cây bị thiếu nước</string>
    <string name="plant_detail_fragment_harvest_description">Cây chuẩn bị thu hoạch</string>
    <string name="plant_detail_fragment_grown_date_description">Trồng lúc: </string>
    <string name="plant_detail_fragment_watering_date_description">Tưới nước lần cuối: </string>
    <string name="plant_detail_fragment_watering_successfully">Đã tưới nước cho cây</string>
    <string name="plant_detail_fragment_cut_down_successfully">Đã chặt cây thành công</string>
    <string name="dialog_fragment_add_plant_success">Trồng cây thành công</string>
    <string name="dialog_fragment_grow_zone_description">Grow Zone Number: </string>
    <string name="dialog_fragment_watering_interval_description">\nWatering Interval: </string>
    <string name="vegetable_view_holder_date_grow_description">Trồng vào lúc: </string>
    <string name="vegetable_view_holder_date_harvest_description">Thời gian thu hoạch: </string>
    <string name="grow_plant_text_view_description">Trồng Cây</string>
    <string name="ok_button_description">OK</string>
    <string name="item_home_title">Vườn Cây</string>
    <string name="item_grow_vegetable_title">Trồng Cây</string>
    <string name="item_already_harvest_title">Cây Sắp thu Hoạch</string>
    <string name="item_worm_title">Cây Bị Sâu</string>
    <string name="item_lack_water_title">Cây Bị Thiếu Nước</string>
    <string name="select_grow_plant_description">Chọn Cây Trồng</string>
    <string name="must_select_grow_plant_description">Bạn Phải Chọn Cây Cần Trồng</string>
</resources>
