<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemHome"
            android:checked="true"
            android:icon="@drawable/ic_baseline_thumb_up_24"
            android:title="@string/item_home_title" />

        <item
            android:id="@+id/itemGrowVegetable"
            android:icon="@drawable/ic_baseline_sports_kabaddi_24"
            android:title="@string/item_grow_vegetable_title" />

        <item
            android:id="@+id/itemAlreadyHarvest"
            android:icon="@drawable/ic_baseline_spa_24"
            android:title="@string/item_already_harvest_title" />

        <item
            android:id="@+id/itemWormVegetable"
            android:icon="@drawable/ic_baseline_mood_bad_24"
            android:title="@string/item_worm_title" />

        <item
            android:id="@+id/itemLackedWater"
            android:icon="@drawable/ic_baseline_where_to_vote_24"
            android:title="@string/item_lack_water_title" />
    </group>
</menu>
