<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/llSignUpMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/linear_layout_padding_left_right"
        android:paddingRight="@dimen/linear_layout_padding_left_right">

        <ImageView
            android:id="@+id/imgArrowLeft"
            android:layout_width="@dimen/arrow_left_image_view_size"
            android:layout_height="@dimen/arrow_left_image_view_size"
            android:layout_marginTop="@dimen/arrow_left_image_margin_top_bottom"
            android:layout_marginBottom="@dimen/arrow_left_image_margin_top_bottom"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_margin_top_bottom"
            android:text="@string/register_to_music_festival_text_view_description"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/register_text_view_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/full_name_text_view_description" />

            <EditText
                android:id="@+id/edtSignUpFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/full_name_edit_text_hint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email_text_view_description" />

            <EditText
                android:id="@+id/edtSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/email_edit_text_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_view_margin_top_bottom"
                android:text="@string/avatar_text_view_description" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/avatar_image_view_size"
                android:layout_height="@dimen/avatar_image_view_size"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mobile_number_text_view_description" />

            <EditText
                android:id="@+id/edtSignUpPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/mobile_number_edit_text_hint"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password_text_view_description" />

            <EditText
                android:id="@+id/edtSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/password_edit_text_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm_password_description" />

            <EditText
                android:id="@+id/edtSignUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/confirm_password_edit_text_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_button_margin_bottom"
            android:background="@drawable/bg_login_button"
            android:enabled="false"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sign_up_linear_layout_margin_bottom"
            android:gravity="center"
            android:text="@string/policy_text_view_description"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
