<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/llLoginMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_text_view_margin_left"
            android:layout_marginTop="@dimen/login_text_view_margin_top"
            android:layout_marginBottom="@dimen/login_text_view_margin_bottom"
            android:text="@string/login_text_view_description"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/login_launcher_text_view_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/register_linear_layout_margin_left"
            android:layout_marginTop="@dimen/register_linear_layout_margin_top"
            android:layout_marginRight="@dimen/register_linear_layout_margin_right"
            android:layout_marginBottom="@dimen/register_linear_layout_margin_bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_edit_text_layout_height"
                android:layout_marginBottom="@dimen/user_name_edit_text_margin_bottom"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_register"
                android:hint="@string/email_edit_text_hint"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/register_edit_text_padding_left" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_edit_text_layout_height"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_register"
                android:hint="@string/password_edit_text_hint"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/register_edit_text_padding_left" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_button_height"
            android:layout_marginLeft="@dimen/register_button_margin_left"
            android:layout_marginRight="@dimen/register_button_margin_right"
            android:background="@drawable/bg_register_button_disabled"
            android:enabled="false"
            android:text="@string/login_button_text"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/linear_layout_register_margin_top"
            android:layout_marginBottom="@dimen/linear_layout_register_margin_bottom"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_view_margin_right"
                android:text="@string/do_not_have_an_account_text_view_description"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now_text_view_description"
                android:textColor="@color/colorBlue"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
